# TGF-Neutron-Flash

./: README.md
neutrons/stage1/: main.cc  readme
neutrons/stage1/include/: myNeutronHPMessenger.hh  myRunAction.hh
neutrons/stage1/src/: myActionInitialization.cc  myDetectorHit.cc  myEventAction.cc  myGammaPhysics.cc  myNeutronHPMessenger.cc  myPhysicsList.cc  myPrimaryGeneratorAction.cc
neutrons/stage2/: CMakeLists.txt  main.cc  readme
neutrons/stage2/include/: myDetectorConstruction.hh  myDetectorSD.hh  myParticle.hh  myParticleInput.hh  myPrimaryGeneratorAction.hh
neutrons/stage2/src/: myActionInitialization.cc  myDetectorConstruction.cc  myDetectorSD.cc  myEventAction.cc  myNeutronHPphysics.cc  myParticleInput.cc  myPrimaryGeneratorAction.cc  myRunAction.cc
neutrons/stage2/src/detectors/: LgPl_WorldBox_Detector_construction.cc  myDetectorConstruction.cc  myDetector_Cylinder.cc
neutrons/stage3/: CMakeLists.txt  input  main.cc  readme  vis.mac
neutrons/stage3/include/: myActionInitialization.hh  myDetectorConstruction.hh  myDetectorHit.hh  myEventAction.hh  myNeutronHPphysics.hh  myParticle.hh  myParticleInput.hh  myPrimaryGeneratorAction.hh  myRunAction.hh
neutrons/stage3/src/: myDetectorConstruction.cc  myDetectorSD.cc  myParticleInput.cc  myPrimaryGeneratorAction.cc  myRunAction.cc
neutrons/stage3/src/detectors/: myDetectorConstruction_Box.cc  myDetectorConstruction_Tubs.cc  myDetectorSD.cc
stage1/: input  readme  vis.mac
stage1/include/: myActionInitialization.hh  myDetectorConstruction.hh  myDetectorHit.hh  myGammaPhysics.hh  myPhysicsList.hh  myPrimaryGeneratorAction.hh
stage1/src/: myDetectorConstruction.cc  myDetectorSD.cc  myNeutronHPphysics.cc  myRunAction.cc
